<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="134dp"
        android:layout_marginLeft="401dp"
        android:text="@string/previous" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/previous"
        android:layout_alignBottom="@+id/previous"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/previous"
        android:text="@string/stop" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stop"
        android:layout_alignBottom="@+id/stop"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/stop"
        android:text="@string/play" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/play"
        android:layout_alignBottom="@+id/play"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/play"
        android:text="@string/next" />

    <Button
        android:id="@+id/toBeginning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/next"
        android:layout_alignBottom="@+id/next"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/next"
        android:text="@string/toBeginning" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:max="100"
        android:progress="0"
        android:secondaryProgress="100" />

</RelativeLayout>
